# realearning

./: .gitignore  Cargo.toml  Makefile  README.md  todo.md
src/: compatibility.rs  io.rs  lib.rs  main.rs  model.rs  plots.rs
src/compatibility/: registro_ale.rs
src/io/: app_io.rs
src/model/: account.rs  registry.rs  transaction.rs
src/plots/: extraction.rs  plot_registry.rs
tests/: registry.rs
