[package]
name = "realearning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
chrono = { version = "0.4.24", features = ["serde"] }
polars = { version = "0.28.0", features = ["is_in", "json", "lazy", "cum_agg", "rows", "strings", "dtype-datetime", "dtype-categorical", "concat_str"] }
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
strum = "0.24.1"
strum_macros = "0.24.3"
calamine = { version = "0.19.1", features = ["dates"]}
indicatif = "0.17.3"
regex = "1.7.3"
log = "0.4.17"
plotters = { version = "0.3.4", features = ["bitmap_encoder"] }
colorous = "1.0.10"
itertools = "0.10.5"
