[package]
name = "realearning"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Lavelli <aleslavelli@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to generate financial plots"
readme = "README.md"
homepage = "https://github.com/alelavelli/realearning"
repository = "https://github.com/alelavelli/realearning"

[dependencies]
csv = "1.1"
chrono = { version = "0.4.24", features = ["serde"] }
polars = { version = "0.28.0", features = ["is_in", "json", "lazy", "cum_agg", "rows", "strings", "dtype-datetime", "dtype-categorical", "concat_str"] }
serde = {version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
strum = "0.24.1"
strum_macros = "0.24.3"
calamine = { version = "0.19.1", features = ["dates"]}
indicatif = "0.17.3"
regex = "1.7.3"
log = "0.4.17"
plotters = { version = "0.3.4", features = ["bitmap_encoder"] }
colorous = "1.0.10"
itertools = "0.10.5"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "2.1.5"
assert_fs = "1.0.13"
